feat: add support for missing CLI functions through native FFI calls to radicle crate
Signed-off-by: jchrist <jchrist@cytech.gr>