@@ -13,19 +13,15 @@ import org.junit.runners.JUnit4;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 @RunWith(JUnit4.class)
 public class IssueListPanelTest extends AbstractIT {
-    private static final String AUTHOR = "did:key:testAuthor";
-    private static final String AUTHOR1 = "did:key:testAuthor1";
-    private static final String AUTHOR2 = "did:key:testAuthor2";
 
-    private RadicleToolWindow radicleToolWindow;
-    private static List<RadIssue> issues;
+    RadicleToolWindow radicleToolWindow;
+    List<RadIssue> issues;
 
     @Before
     public void setUpToolWindow() throws InterruptedException {
@@ -49,14 +45,14 @@ public class IssueListPanelTest extends AbstractIT {
         var issueModel = listPanel.getModel();
         assertThat(issueModel.getSize()).isEqualTo(1);
         var firstRadIssue = issueModel.get(0);
-        assertThat(firstRadIssue.author.id).isEqualTo(issues.get(0).author.id);
-        assertThat(firstRadIssue.title).isEqualTo(issues.get(0).title);
-        assertThat(firstRadIssue.labels).isEqualTo(issues.get(0).labels);
+        assertThat(firstRadIssue.author.id).isEqualTo(issues.getFirst().author.id);
+        assertThat(firstRadIssue.title).isEqualTo(issues.getFirst().title);
+        assertThat(firstRadIssue.labels).isEqualTo(issues.getFirst().labels);
     }
 
     @Test
-    public void testfilterEmptyResults() {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+    public void testFilterEmptyResults() {
+        var controller = radicleToolWindow.issueTabController;
         var filterWithSearch = new IssueListSearchValue();
 
         //Filter with search (peer id)
@@ -72,18 +68,18 @@ public class IssueListPanelTest extends AbstractIT {
 
     @Test
     public void testFilterByAuthor() {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller = radicleToolWindow.issueTabController;
         var listPanel = controller.getIssueListPanel();
         var filter = new IssueListSearchValue();
-        filter.author = AUTHOR;
-        listPanel.filterList(filter);
 
+        filter.author = issues.getFirst().author.id;
+        listPanel.filterList(filter);
         var issueModel = listPanel.getModel();
         assertThat(issueModel.getSize()).isEqualTo(1);
         var issue = issueModel.get(0);
-        assertThat(issue.author.id).isEqualTo(issues.get(0).author.id);
+        assertThat(issue.author.id).isEqualTo(issues.getFirst().author.id);
 
-        filter.author = AUTHOR1;
+        filter.author = issues.get(1).author.id;
         listPanel.filterList(filter);
 
         issueModel = listPanel.getModel();
@@ -94,12 +90,12 @@ public class IssueListPanelTest extends AbstractIT {
 
     @Test
     public void testFilterByProject() throws ExecutionException, InterruptedException {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller = radicleToolWindow.issueTabController;
         var listPanel = controller.getIssueListPanel();
         var filter = new IssueListSearchValue();
         var searchVm = listPanel.getSearchVm();
         var projectNames = searchVm.getProjectNames();
-        filter.project = projectNames.get().get(0);
+        filter.project = projectNames.get().getFirst();
         listPanel.filterList(filter);
 
         var issueModel = listPanel.getModel();
@@ -107,20 +103,19 @@ public class IssueListPanelTest extends AbstractIT {
     }
 
     @Test
-    public void testFilterByAssignees() {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+    public void testFilterByAssignees() throws Exception {
+        var controller = radicleToolWindow.issueTabController;
         var listPanel = controller.getIssueListPanel();
         var filter = new IssueListSearchValue();
-        filter.assignee = issues.get(0).assignees.get(1).id;
+        filter.assignee = issues.getFirst().assignees.get(1).id;
         listPanel.filterList(filter);
-
         var issueModel = listPanel.getModel();
         assertThat(issueModel.getSize()).isEqualTo(2);
     }
 
     @Test
     public void testSearch() {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller = radicleToolWindow.issueTabController;
         var filterWithSearch = new IssueListSearchValue();
 
         //Filter with title
@@ -136,7 +131,7 @@ public class IssueListPanelTest extends AbstractIT {
 
     @Test
     public void testState() {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller = radicleToolWindow.issueTabController;
         var filterWithSearch = new IssueListSearchValue();
 
         filterWithSearch.state = RadIssue.State.OPEN.label;
@@ -164,7 +159,7 @@ public class IssueListPanelTest extends AbstractIT {
 
     @Test
     public void testTagDuplicates() throws ExecutionException, InterruptedException {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller = radicleToolWindow.issueTabController;
         var listPanel = controller.getIssueListPanel();
         var searchVm = listPanel.getSearchVm();
         var tags = searchVm.getLabels().get();
@@ -173,7 +168,7 @@ public class IssueListPanelTest extends AbstractIT {
 
     @Test
     public void testAssigneesDuplicates() throws ExecutionException, InterruptedException {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller = radicleToolWindow.issueTabController;
         var listPanel = controller.getIssueListPanel();
         var searchVm = listPanel.getSearchVm();
         var tags = searchVm.getAssignees().get();
@@ -182,7 +177,7 @@ public class IssueListPanelTest extends AbstractIT {
 
     @Test
     public void testTag() {
-        var controller = (IssueTabController) radicleToolWindow.issueTabController;
+        var controller =  radicleToolWindow.issueTabController;
         var filterWithSearch = new IssueListSearchValue();
 
         filterWithSearch.label = "tag1";
@@ -202,19 +197,21 @@ public class IssueListPanelTest extends AbstractIT {
 
 
     public static List<RadIssue> getTestIssues() {
-        var discussion = createDiscussion(UUID.randomUUID().toString(), AUTHOR, "Figure it out, i dont care");
-        var discussion1 = createDiscussion(UUID.randomUUID().toString(), AUTHOR1, "This is a feature not a bug");
-        var radIssue = new RadIssue("c5df12", new RadAuthor(AUTHOR), "Title1", RadIssue.State.OPEN, List.of(new RadAuthor(AUTHOR), new RadAuthor(AUTHOR1)),
+        final var author1 = new RadAuthor("did:key:testAuthor1", "testAuthor1");
+        final var author2 = new RadAuthor("did:key:testAuthor2", "testAuthor2");
+        final var author3 = new RadAuthor("did:key:testAuthor3", "testAuthor3");
+        var discussion = createDiscussion(author1, "Figure it out, i dont care");
+        var discussion1 = createDiscussion(author2, "This is a feature not a bug");
+        var radIssue = new RadIssue("c5df12", author1, "Title1", RadIssue.State.OPEN, List.of(author1, author2),
                 List.of("tag1", "tag2"), List.of(discussion));
-        var radIssue1 = new RadIssue("123ca", new RadAuthor(AUTHOR1), "Title", RadIssue.State.CLOSED, List.of(new RadAuthor(AUTHOR1), new RadAuthor(AUTHOR2)),
+        var radIssue1 = new RadIssue("123ca", author2, "Title", RadIssue.State.CLOSED, List.of(author2, author3),
                 List.of("tag3", "tag4"), List.of(discussion1));
-        issues = List.of(radIssue, radIssue1);
-        return issues;
+        return List.of(radIssue, radIssue1);
     }
 
-    private static RadDiscussion createDiscussion(String id, String authorId, String body) {
-        var edit = new RadPatch.Edit(new RadAuthor("myTestAuthor"), "", Instant.now(), List.of());
+    private static RadDiscussion createDiscussion(RadAuthor author, String body) {
+        var edit = new RadPatch.Edit(randomAuthor(), "", Instant.now(), List.of());
         var edits = List.of(edit);
-        return new RadDiscussion(id, new RadAuthor(authorId), body, Instant.now(), "", List.of(), List.of(), null, edits);
+        return new RadDiscussion(randomId(), author, body, Instant.now(), "", List.of(), List.of(), null, edits);
     }
 }
